# hello

./: meson.build
data/: hello_again.appdata.xmil.in  hello_again.desktop.in
po/: POTFILES  meson.build
src/: Application.vala
